--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet" />
     <title>VegRango Quentinhas</title>
     <!-- favicon -->
-    <link rel="icon" type="image/x-icon" href="imagens descod/vegRango logo.png">
+    <link rel="icon" type="image/x-icon" href="veg-rango-logo.png">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
         <div id="fundo-com-imagem">
             <section id="navbar">
                 <!--se nao separar os dois links a posicao fica errada-->
-                <a id="logo-link" href="index.html"><img class="logo" src="imagens descod/vegRango logo.png"
+                <a id="logo-link" href="index.html"><img class="logo" src="veg-rango-logo.png"
                         alt="Logo da empresa" title="VegRango Quentinhas" /></a>
                 <a id="texto-logo-link" href="index.html"><span id="texto-logo">VegRango Quentinhas</span></a>
                 <nav class="menu">
