--- a/refeicoes.html
+++ b/refeicoes.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <title>VegRango Quentinhas - Refeições</title>
     <!-- favicon -->
-    <link rel="icon" type="image/x-icon" href="imagens descod/vegRango logo.png">
+    <link rel="icon" type="image/x-icon" href="veg-rango-logo.png">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
         <div id="fundo-com-imagem">
             <section id="navbar">
                 <!--se nao separar os dois links a posicao fica errada-->
-                <a id="logo-link" href="index.html"><img class="logo" src="imagens descod/vegRango logo.png"
+                <a id="logo-link" href="index.html"><img class="logo" src="veg-rango-logo.png"
                         alt="Logo da empresa" title="VegRango Quentinhas" /></a>
                 <a id="texto-logo-link" href="index.html"><span id="texto-logo">VegRango Quentinhas</span></a>
                 <nav class="menu">
@@ -65,7 +65,7 @@
             <h4>Opção 1</h4>
             <h2>Macarrão ao pesto com vegetais</h2>
             <br>
-            <img id="macarrao" src="imagens descod/fundoPaginaRefeicoes.jpg" alt="Macarrão" title="Macarrão ao molho pesto com vegetais">
+            <img id="macarrao" src="refeicoes-background.jpg" alt="Macarrão" title="Macarrão ao molho pesto com vegetais">
             <br><br><br>
             <h5>Fusilli integral ao pesto de manjericão e castanha de caju com brócolis, tomate e abobrinha grelhados
             </h5>
@@ -76,7 +76,7 @@
             <h4>Opção 2</h4>
             <h2>Poke de tofu</h2>
             <br>
-            <img id="poke" src="imagens descod/poke-de-tofu-vegano.jpeg" alt="Poke" title="Prato de Poke Vegano">
+            <img id="poke" src="poke-de-tofu-vegano.jpeg" alt="Poke" title="Prato de Poke Vegano">
             <br><br><br>
             \<h5>Arroz integral, tofu grelhado no shoyo com cebola, abacate, pepino, rabanete, cebola roxa, gergelim,
                 salsinha</h5>
@@ -87,7 +87,7 @@
             <h4>Opção 3</h4>
             <h2>Moqueca de banana-da-terra</h2>
             <br>
-            <img id="moqueca" src="imagens descod/moqueca.jpg" alt="Moqueca" title="Prato de moqueca de banana da banana-da-terra">
+            <img id="moqueca" src="moqueca.jpg" alt="Moqueca" title="Prato de moqueca de banana da banana-da-terra">
             <br><br><br>
             <h5>Moqueca de banana-da-terra feita com leite de coco caseiro acompanhada de arroz de brócolis e farofa
             </h5>
