carrossel adicionado a todas as páginas

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
     <!-- HEADER -->
     <header>
-        "<div id="carrossel" class="carousel slide" data-ride="carousel">
+        <div id="carrossel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active"><img src="home-page-background.jpg" class="d-block w-100" alt="Diversas marmitas" height="10%">
                 </div>
@@ -32,6 +32,7 @@
             </div>
             </div>
         </div>
+
 
     <!-- NÃO DEU CERTO
         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
