--- a/refeicoes.html
+++ b/refeicoes.html
@@ -7,9 +7,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
     <link rel="stylesheet" type="text/css" href="refeicoes.css" />
-
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
@@ -24,7 +22,16 @@
 <body>
     <!-- HEADER -->
     <header>
-        <div id="fundo-com-imagem">
+        <div id="carrossel" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active"><img src="refeicoes-background.jpg" class="d-block w-100" alt="Macarrão ao pesto com vegetais" height="10%">
+                </div>
+            <div class="carousel-item"><img src="na-midia-background.jpg" class="d-block w-100" alt="Macarrão ao pesto com champignon" height="10%">
+            </div>
+            <div class="carousel-item"><img src="home-page-background.jpg" class="d-block w-100" alt="Diversas marmitas" height="10%">
+            </div>
+            </div>
+        </div>
             <section id="navbar">
                 <!--se nao separar os dois links a posicao fica errada-->
                 <a id="logo-link" href="index.html"><img class="logo" src="veg-rango-logo.png"
@@ -59,6 +66,7 @@
                 <h1 id="titulo">Refeições</h1>
             </section>
         </div>
+    
     </header>
     <!--MAIN-->
     <main>
@@ -103,6 +111,10 @@
     </footer>
     <!-- CHAMADA DE ARQUIVO JS -->
     <script src="index.js"></script>
+     <!--CHAMADA SCRIPT BOOTSTRAP-->
+     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 
 </html>
