pag na midia vira pag galeria

--- a/na-midia.html
+++ b/na-midia.html
@@ -1,4 +1,4 @@
-<!--SITE DESCODIFICADAS (VEGRANGO) - PÁGINA NA MÍDIA-->
+<!--SITE DESCODIFICADAS (VEGRANGO) - PÁGINA GALERIA (ANTIGA pág 'NA MÍDIA')-->
 
 <!DOCTYPE html>
 <html lang="pt-br">
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
-    <title>VegRangoQuentinhas - Na mídia</title>
+    <title>VegRangoQuentinhas - Galeria</title>
     <!-- favicon -->
     <link rel="icon" type="image/x-icon" href="veg-rango-logo.png">
 </head>
@@ -64,12 +64,38 @@
             </section>
 
             <section id="titulo-subtitulo">
-                <h1 id="titulo">Na mídia</h1>
+                <h1 id="titulo">Galeria</h1>
             </section>
         </div>
     </header>
     <!-- MAIN -->
     <main>
+        <div class="album">
+            <figure class="album_item album_item-1">
+                <img src="imagens descod/v-churrasco-seitan.jpg" class="album_img" alt="Churrasco de seitan (fermentado de soja orgânica)">
+            </figure>
+            <figure class="album_item album_item-2">
+                <img src="imagens descod/h-macarrao-pesto.jpg" class="album_img" alt="Macarrão ao pesto">
+            </figure>
+            <figure class="album_item album_item-3">
+                <img src="imagens descod/h-mix-legumes.jpg" class="album_img" alt="Mix de legumes com arroz integral">
+            </figure>
+            <figure class="album_item album_item-4">
+                <img src="imagens descod/v-salada-tofu.jpg" class="album_img" alt="Salada verde de tofu com tomate">
+            </figure>
+            <figure class="album_item album_item-5">
+                <img src="imagens descod/h-dumpling.jpg" class="album_img" alt="Dumpling de legumes ao molho secreto">
+            </figure>
+            <figure class="album_item album_item-6">
+                <img src="imagens descod/h-possivel-capa-salada-feijao-tupper.jpg" class="album_img" alt="Salada com lentilhas, arroz rosa de beterraba, milho, cebolinha, tomate-cereja e azeitonas">
+            </figure>
+            <figure class="album_item album_item-7">
+                <img src="imagens descod/v-yakissoba-alternativo.jpg" class="album_img" alt="Yakissoba desconstruído com espinafre">
+            </figure>
+            <figure class="album_item album_item-8">
+                <img src="imagens descod/h-sopa-abobora.jpg" class="album_img" alt="Sopa de abóbora">
+            </figure>
+        </div>
         <br>
         <section id="midia-section">
             <h2 id="midia-texto">Confira nossos momentos de fama!</h2>
