--- a/na-midia.html
+++ b/na-midia.html
@@ -24,11 +24,11 @@
     <header>
         <div id="carrossel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
-                <div class="carousel-item active"><img src="na-midia-background.jpg" class="d-block w-100" alt="Macarrão ao pesto com champignon" height="10%">
+                <div class="carousel-item active"><img src="Imagens descod/h-possivel-capa-salada-chips-batata-doce.jpg" class="d-block w-100" alt="Macarrão ao pesto com champignon" height="10%">
                 </div>
-            <div class="carousel-item"><img src="refeicoes-background.jpg" class="d-block w-100" alt="Diversas marmitas" height="10%">
+            <div class="carousel-item"><img src="home-page-background.jpg" class="d-block w-100" alt="Diversas marmitas" height="10%">
             </div>
-            <div class="carousel-item"><img src="na-midia-background.jpg" class="d-block w-100" alt="Macarrão ao pesto com vegetais" height="10%">
+            <div class="carousel-item"><img src="refeicoes-background.jpg" class="d-block w-100" alt="Macarrão ao pesto com vegetais" height="10%">
             </div>
             </div>
         </div>
@@ -46,7 +46,7 @@
                             <a id="sublinhado-pg-refeic" href="refeicoes.html">Refeições</a>
                         </li>
                         <li id="icone-media">
-                            <a id="sublinhado-pg-midia" href="na-midia.html">Na mídia</a>
+                            <a id="sublinhado-pg-midia" href="na-midia.html">Galeria</a>
                         </li>
                         <!--posso colocar dois ids no mesmo elemento em tags diferentes?-->
                     </ul>
@@ -75,7 +75,7 @@
                 <img src="imagens descod/v-churrasco-seitan.jpg" class="album_img" alt="Churrasco de seitan (fermentado de soja orgânica)">
             </figure>
             <figure class="album_item album_item-2">
-                <img src="imagens descod/h-macarrao-pesto.jpg" class="album_img" alt="Macarrão ao pesto">
+                <img src="imagens descod/v-nhoque-pesto-nozes.jpg" class="album_img" alt="Nhoque ao pesto com nozes">
             </figure>
             <figure class="album_item album_item-3">
                 <img src="imagens descod/h-mix-legumes.jpg" class="album_img" alt="Mix de legumes com arroz integral">
@@ -94,6 +94,9 @@
             </figure>
             <figure class="album_item album_item-8">
                 <img src="imagens descod/h-sopa-abobora.jpg" class="album_img" alt="Sopa de abóbora">
+            </figure>
+            <figure class="album_item album_item-9">
+                <img src="imagens descod/h-macarrao-cogumelos.jpg" class="album_img" alt="Macarrao ao funghi">
             </figure>
         </div>
         <br>
