--- a/refeicoes.html
+++ b/refeicoes.html
@@ -26,7 +26,7 @@
             <div class="carousel-inner">
                 <div class="carousel-item active"><img src="refeicoes-background.jpg" class="d-block w-100" alt="Macarrão ao pesto com vegetais" height="10%">
                 </div>
-            <div class="carousel-item"><img src="na-midia-background.jpg" class="d-block w-100" alt="Macarrão ao pesto com champignon" height="10%">
+            <div class="carousel-item"><img src="Imagens descod/h-possivel-capa-salada-chips-batata-doce.jpg" class="d-block w-100" alt="Salada com chips de batata doce e maionese artesanal" height="10%">
             </div>
             <div class="carousel-item"><img src="home-page-background.jpg" class="d-block w-100" alt="Diversas marmitas" height="10%">
             </div>
@@ -46,7 +46,7 @@
                             <a id="sublinhado-pg-refeic" href="refeicoes.html">Refeições</a>
                         </li>
                         <li id="icone-media">
-                            <a id="sublinhado pg-midia" href="na-midia.html">Na mídia</a>
+                            <a id="sublinhado pg-midia" href="na-midia.html">Galeria</a>
                         </li>
                     </ul>
 
