--- a/na-midia.html
+++ b/na-midia.html
@@ -70,7 +70,7 @@
     </header>
     <!-- MAIN -->
     <main>
-        <div class="album">
+        <div id="album">
             <figure class="album_item album_item-1">
                 <img src="imagens descod/v-churrasco-seitan.jpg" class="album_img" alt="Churrasco de seitan (fermentado de soja orgânica)">
             </figure>
